--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-  </head>
-  <body>
 
+  <style>
+      .center {
+        text-align:center;
+      }
+
+  </style>
+  </head>
+  <body style="background-image:url('img/Jurassic-World.jpg')">
+    <h1 class=center> Jurassic World: Fallen Kingdom</h1>
+    <p class=center> Jurassic World: Fallen Kingdom is a 2018 American science fiction adventure film and a sequel to Jurassic World in 2015. </p>
+    <p class=center> Jurassic World: Fallen Kingdom was released on June 22nd, 2018.
+    <h1 class=center> Three years after the destruction of the Jurassic World theme park, Owen Grady and Claire Dearing return to the island of Isla Nublar to save the remaining dinosaurs from a volcano that's about to erupt. They soon encounter terrifying new breeds of gigantic dinosaurs, while uncovering a conspiracy that threatens the entire planet.</h1>
+    <ol>
+  <li>Chris Pratt</li>
+  <li>Bryce Dallas Howard</li>
+  <li>Jeff Goldblum</li>
+    </ol>
   </body>
 </html>
