--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
       .center {
         text-align:center;
       }
+      td {
+        background-color:black;
+        color:white
+      }
+      th {
+        background-color:black;
+        color:white
+      }
+      .right-table {float:right;}
+      p {background-color:grey;
+      color:white;
+      }
+      h1 {background-color:grey;
+      color:white;
+    }
 
   </style>
   </head>
@@ -16,10 +31,44 @@
     <p class=center> Jurassic World: Fallen Kingdom is a 2018 American science fiction adventure film and a sequel to Jurassic World in 2015. </p>
     <p class=center> Jurassic World: Fallen Kingdom was released on June 22nd, 2018.
     <h1 class=center> Three years after the destruction of the Jurassic World theme park, Owen Grady and Claire Dearing return to the island of Isla Nublar to save the remaining dinosaurs from a volcano that's about to erupt. They soon encounter terrifying new breeds of gigantic dinosaurs, while uncovering a conspiracy that threatens the entire planet.</h1>
-    <ol>
-  <li>Chris Pratt</li>
-  <li>Bryce Dallas Howard</li>
-  <li>Jeff Goldblum</li>
-    </ol>
+    <table border="10" style="border-color:white">
+      <th>Actors</th>
+      <th>Roles</th>
+      <tr>
+        <td>Chris Pratt</td>
+        <td>Owen</td>
+      </tr>
+      <tr>
+        <td>Bryce Dallas Howard</td>
+        <td>Claire</td>
+      </tr>
+      <tr>
+        <td>Jeff Goldblum</td>
+        <td>Ian Malcolm</td>
+      </tr>
+    </table>
+
+    <table class="right-table" border="10" style="border-color:white">
+      <th>Title</th>
+      <th>Time</th>
+      <tr>
+        <td>The Title Makes Me Jurassic</td>
+        <td>2:54</td>
+      </tr>
+      <tr>
+        <td>The Theropod Preservation Society</td>
+        <td>3:47</td>
+      </tr>
+      <tr>
+        <td>Maisie and the Island</td>
+        <td>2:07</td>
+      </tr>
+      <tr>
+        <td>March of the Wheatley Cavalcade</td>
+        <td>2:14</td>
+      </tr>
+    </table>
+
+    <img src="img/downlaod.jpg" alt="Jurassic World">
   </body>
 </html>
